manifest/deployment/resource-service.yaml

apiVersion: v1
kind: Service
metadata:
  namespace: k8s-program
  name: resource-service
spec:
  type: NodePort
  selector:
    app: resource-service-pod
  ports:
    - port: 8180
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 8180
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: k8s-program
  name: resource-service-deployment
  labels:
    app: resource-service-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resource-service-pod
  template:
    metadata:
      labels:
        app: resource-service-pod
    spec:
      containers:
        - name: resource-service-pod
          image: resource-service:latest
          ports:
            - containerPort: 8180
          imagePullPolicy: IfNotPresent
