manifest/deployment/song-db.yaml

apiVersion: v1
kind: Service
metadata:
  namespace: k8s-program
  name: song-db
  labels:
    app: song-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      name: web
  selector:
    app: song-db

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: k8s-program
  name: song-db
spec:
  selector:
    matchLabels:
      app: song-db # has to match .spec.template.metadata.labels
  serviceName: "song-db"
  template:
    metadata:
      labels:
        app: song-db # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: song-db
          image: postgres:13.3-alpine
          ports:
            - containerPort: 5432
              name: web
          volumeMounts:
            - name: www-persistent-storage
              mountPath: /var/lib/postgresql/data/pgdata
            - name: song-db-init
              mountPath: "/docker-entrypoint-initdb.d"
              readOnly: true
      volumes:
        - name: song-db-init
          configMap:
            name: song-db-init-config-map
  volumeClaimTemplates:
    - metadata:
        name: www-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "local-path"
        resources:
          requests:
            storage: 1Gi
