manifest/deployment/song-service.yaml

apiVersion: v1
kind: Service
metadata:
  namespace: k8s-program
  name: song-service
spec:
  type: NodePort
  selector:
    app: song-service-pod
  ports:
    - port: 8180
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 8180
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: k8s-program
  name: song-service-deployment
  labels:
    app: song-service-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: song-service-pod
  template:
    metadata:
      labels:
        app: song-service-pod
    spec:
      containers:
        - name: song-service-pod
          image: song-service:latest
#          args:
#            - /bin/sh
#            - -c
#            - touch /home/health
          ports:
            - containerPort: 8180
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: www-persistent-storage
              mountPath: /home
          livenessProbe:
            exec:
              command:
                - cat
                - /home/health
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8180
            initialDelaySeconds: 3
            periodSeconds: 3
          startupProbe:
            httpGet:
              path: /started
              port: 8180
            initialDelaySeconds: 3
            periodSeconds: 3
      volumes:
        - name: www-persistent-storage
          persistentVolumeClaim:
            claimName: song-claim-test
