manifest/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /songs(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: songs-app-service
                port:
                  number: 8081
          - path: /resources(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: resources-app-service
                port:
                  number: 80
